RWD 大致有感覺了

--- a/src/input.css
+++ b/src/input.css
@@ -59,3 +59,25 @@
 .mem_img_12{
     width: 1642px;
 }
+
+.kv_bike{
+    top: 45%;
+    left: 66%;
+}
+.kv_onegirl{
+    top: 58%;
+    left: 76%;
+}
+.kv_funpeople{
+    top: 61%;
+    left: 80%;
+}
+.kv_mandog{
+    top: 63%;
+    left: 69%;
+}
+.kv_family{
+    top: 83%;
+    left: 58%;
+}
+
