1920版本快完工

--- a/src/input.css
+++ b/src/input.css
@@ -81,3 +81,29 @@
     left: 58%;
 }
 
+.illus{
+    width:360px;
+    height:76px;
+}
+.room1{
+    width:683px;
+    height:475px;
+}
+.room2{
+    width:599px;
+    height:468px;
+}
+.room3{
+    width:344px;
+    height:295px;
+}
+
+.room_txt_1{
+    width:668px;
+    height:224px;
+}
+
+.room_txt_2{
+    width:567px;
+    height:245px;
+}
