--- a/src/input.css
+++ b/src/input.css
@@ -1,120 +1,120 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.lt_img_1 {
-    height: 488px;
-    width: 240px;
-}
+/*.lt_img_1 {*/
+/*    height: 488px;*/
+/*    width: 240px;*/
+/*}*/
 
-.lt_img_2 {
-    height: 210px;
-    width: 390px;
-}
+/*.lt_img_2 {*/
+/*    height: 210px;*/
+/*    width: 390px;*/
+/*}*/
 
-.lt_img_3 {
-    height: 376px;
-    width: 306px;
-}
+/*.lt_img_3 {*/
+/*    height: 376px;*/
+/*    width: 306px;*/
+/*}*/
 
-.lt_img_4 {
-    height: 246px;
-    width: 369px;
-}
+/*.lt_img_4 {*/
+/*    height: 246px;*/
+/*    width: 369px;*/
+/*}*/
 
-.lt_img_5 {
-    height: 519px;
-    width: 777px;
-}
+/*.lt_img_5 {*/
+/*    height: 519px;*/
+/*    width: 777px;*/
+/*}*/
 
-.lt_img_6 {
-    height: 319px;
-    width: 478px;
-}
+/*.lt_img_6 {*/
+/*    height: 319px;*/
+/*    width: 478px;*/
+/*}*/
 
-.lt_img_7 {
-    height: 350px;
-    width: 542px;
-}
+/*.lt_img_7 {*/
+/*    height: 350px;*/
+/*    width: 542px;*/
+/*}*/
 
-.lt_img_8 {
-    height: 600px;
-    width: 400px;
-}
+/*.lt_img_8 {*/
+/*    height: 600px;*/
+/*    width: 400px;*/
+/*}*/
 
-.lt_img_9 {
-    height: 420px;
-    width: 280px;
-}
+/*.lt_img_9 {*/
+/*    height: 420px;*/
+/*    width: 280px;*/
+/*}*/
 
-.lt_img_10 {
-    height: 231px;
-    width: 192px;
-}
+/*.lt_img_10 {*/
+/*    height: 231px;*/
+/*    width: 192px;*/
+/*}*/
 
-.lt_img_11 {
-    height: 220px;
-    width: 651px;
-}
+/*.lt_img_11 {*/
+/*    height: 220px;*/
+/*    width: 651px;*/
+/*}*/
 
-.mem_img_12{
-    /*width: 1642px;*/
-}
+/*.mem_img_12{*/
+/*    !*width: 1642px;*!*/
+/*}*/
 
-.kv_bike{
-    top: 45%;
-    left: 66%;
-}
-.kv_onegirl{
-    top: 58%;
-    left: 76%;
-}
-.kv_funpeople{
-    top: 61%;
-    left: 80%;
-}
-.kv_mandog{
-    top: 63%;
-    left: 69%;
-}
-.kv_family{
-    top: 83%;
-    left: 58%;
-}
+/*.kv_bike{*/
+/*    top: 45%;*/
+/*    left: 66%;*/
+/*}*/
+/*.kv_onegirl{*/
+/*    top: 58%;*/
+/*    left: 76%;*/
+/*}*/
+/*.kv_funpeople{*/
+/*    top: 61%;*/
+/*    left: 80%;*/
+/*}*/
+/*.kv_mandog{*/
+/*    top: 63%;*/
+/*    left: 69%;*/
+/*}*/
+/*.kv_family{*/
+/*    top: 83%;*/
+/*    left: 58%;*/
+/*}*/
 
-.illus{
-    width:360px;
-    height:76px;
-}
-.room1{
-    width:683px;
-    height:475px;
-}
-.room2{
-    width:599px;
-    height:468px;
-}
-.room3{
-    width:344px;
-    height:295px;
-}
+/*.illus{*/
+/*    width:360px;*/
+/*    height:76px;*/
+/*}*/
+/*.room1{*/
+/*    width:683px;*/
+/*    height:475px;*/
+/*}*/
+/*.room2{*/
+/*    width:599px;*/
+/*    height:468px;*/
+/*}*/
+/*.room3{*/
+/*    width:344px;*/
+/*    height:295px;*/
+/*}*/
 
-.room_txt_1{
-    width:668px;
-    height:224px;
-}
+/*.room_txt_1{*/
+/*    width:668px;*/
+/*    height:224px;*/
+/*}*/
 
-.room_txt_2{
-    width:567px;
-    height:245px;
-}
-#map {
-}
-.m_sketch_1{
-    width: 843px;
-    height: 320px;
-}
+/*.room_txt_2{*/
+/*    width:567px;*/
+/*    height:245px;*/
+/*}*/
+/*#map {*/
+/*}*/
+/*.m_sketch_1{*/
+/*    width: 843px;*/
+/*    height: 320px;*/
+/*}*/
 
-.m_sketch_2{
-    width: 583px;
-    height: 415px;
-}
+/*.m_sketch_2{*/
+/*    width: 583px;*/
+/*    height: 415px;*/
+/*}*/
